syntax = "proto3";

package testdata;
option go_package = "github.com/byebyebruce/natsrpc/testdata;testdata";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Empty {}

message Int32 {
  int32 val = 1;
}

message String {
  string val = 1;
}